# nlp_project

./: .gitmodules  README.md  cantonese_to_mandarin_zero_valid_tatoeba_sentences.txt  data_split.py  eval_prompting.sh  evaluate.py  prompting.py  pyproject.toml
data/: test_cleaned_parallel_sentences.txt  test_tatoeba_sentences.csv  test_tatoeba_sentences.txt  train_cleaned_parallel_sentences.txt  valid_cleaned_parallel_sentences.txt  valid_tatoeba_sentences.csv  valid_tatoeba_sentences.txt
output_not_finetuned/: cantonese_to_mandarin_zero_test_tatoeba_sentences.txt
outputs/: cantonese_to_mandarin_few_shot_test_tatoeba_sentences.txt  cantonese_to_mandarin_few_shot_valid_tatoeba_sentences.txt  cantonese_to_mandarin_zero_test_cleaned_parallel_sentences.txt  cantonese_to_mandarin_zero_test_tatoeba_sentences.txt  cantonese_to_mandarin_zero_valid_cleaned_parallel_sentences.txt  cantonese_to_mandarin_zero_valid_tatoeba_sentences.txt  mandarin_to_cantonese_valid_tatoeba.txt  mandarin_to_cantonese_zero_test_cleaned_parallel_sentences.txt  mandarin_to_cantonese_zero_test_tatoeba_sentences.txt  mandarin_to_cantonese_zero_valid_cleaned_parallel_sentences.txt  mandarin_to_cantonese_zero_valid_tatoeba_sentences.txt
raw_data/: cleaned_parallel_sentences.txt  tatoeba_sentences.csv
