[tool.poetry]
name = "nlp_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.23.5"
pandas = "^2.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.18.0"
scikit-learn = "^1.3.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
sacrebleu = "^2.3.0"
openai = "^1.3.7"
opencc-python-reimplemented = "^0.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
